--- a/experiments/templates/experiments/goal.html
+++ b/experiments/templates/experiments/goal.html
@@ -1,1 +1,6 @@
 <img src="{% url experiment_goal goal_name %}" height="1" width="1" />
+<script>
+    $(function() {
+        $(experiments).trigger('goal', ['{{ goal_name }}']);
+    });
+</script>
