--- a/example_project/templates/goal.html
+++ b/example_project/templates/goal.html
@@ -3,6 +3,14 @@
 <html>
 <head>
     <title>Goal Page</title>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
+    <script src="{% url nexus:media 'experiments' 'js/jquery.cookie.js' %}"></script>
+    <script src="{% url nexus:media 'experiments' 'js/experiments.js' %}"></script>
+    <script type="text/javascript">
+            $(experiments).bind("goal", function(event, goal) {
+                console.log("Goal, " + goal + ", attained!");
+            });
+    </script>
 </head>
 <body>
     {% experiment_goal "page_goal" %}
