--- a/experiments/templates/nexus/experiments/index.html
+++ b/experiments/templates/nexus/experiments/index.html
@@ -1,20 +1,19 @@
 {% extends "nexus/module.html" %}
 
-{% load staticfiles %}
 {% load experiment_helpers %}
 
 {% block head %}
     {{ block.super }}
 
-    <link rel="stylesheet" href="{% static 'experiments/css/experiments.css' %}">
+    <link rel="stylesheet" href="{{ STATIC_URL }}experiments/css/experiments.css">
 
     <style>
         #container table.experiments td.actions button.edit span {
-            background: transparent url("{% static 'experiments/img/edit.png' %}") no-repeat left 35%;
+            background: transparent url("{{ STATIC_URL }}experiments/img/edit.png") no-repeat left 35%;
         }
 
         #container table.experiments td.actions button.delete span {
-            background: transparent url("{% static 'experiments/img/delete.png' %}") no-repeat left 35%;
+            background: transparent url("{{ STATIC_URL }}experiments/img/delete.png") no-repeat left 35%;
         }
     </style>
 
@@ -27,8 +26,8 @@
         };
     </script>
 
-    <script src="{% static 'experiments/js/string_score.min.js' %}"></script>
-    <script src="{% static 'experiments/js/nexus_experiments.js' %}"></script>
+    <script src="{{ STATIC_URL }}experiments/js/string_score.min.js"></script>
+    <script src="{{ STATIC_URL }}experiments/js/nexus_experiments.js"></script>
 {% endblock %}
 
 {% block content %}
