--- a/experiments/templates/nexus/experiments/results.html
+++ b/experiments/templates/nexus/experiments/results.html
@@ -1,12 +1,11 @@
 {% extends "nexus/module.html" %}
-{% load staticfiles %}
 {% load humanize %}
 {% load experiment_helpers %}
 
 {% block head %}
     {{ block.super }}
 
-    <link rel="stylesheet" href="{% static 'experiments/css/experiments.css' %}">
+    <link rel="stylesheet" href="{{ STATIC_URL }}experiments/css/experiments.css">
 
     <script>
         var EXPERIMENT = {
@@ -18,7 +17,7 @@
         };
     </script>
 
-    <script src="{% static 'experiments/js/nexus_experiments.js' %}"></script>
+    <script src="{{ STATIC_URL }}experiments/js/nexus_experiments.js"></script>
 
 {% endblock %}
 
