--- a/experiments/templates/nexus/experiments/index.html
+++ b/experiments/templates/nexus/experiments/index.html
@@ -5,15 +5,15 @@
 {% block head %}
     {{ block.super }}
 
-    <link rel="stylesheet" href="{{ STATIC_URL }}experiments/css/experiments.css">
+    <link rel="stylesheet" href="{% url nexus:media 'experiments' 'css/experiments.css' %}">
 
     <style>
         #container table.experiments td.actions button.edit span {
-            background: transparent url("{{ STATIC_URL }}experiments/img/edit.png") no-repeat left 35%;
+            background: transparent url("{% url nexus:media 'experiments' 'img/edit.png' %}") no-repeat left 35%;
         }
 
         #container table.experiments td.actions button.delete span {
-            background: transparent url("{{ STATIC_URL }}experiments/img/delete.png") no-repeat left 35%;
+            background: transparent url("{% url nexus:media 'experiments' 'img/delete.png' %}") no-repeat left 35%;
         }
     </style>
 
@@ -26,8 +26,8 @@
         };
     </script>
 
-    <script src="{{ STATIC_URL }}experiments/js/string_score.min.js"></script>
-    <script src="{{ STATIC_URL }}experiments/js/nexus_experiments.js"></script>
+    <script src="{% url nexus:media 'experiments' 'js/string_score.min.js' %}"></script>
+    <script src="{% url nexus:media 'experiments' 'js/nexus_experiments.js' %}"></script>
 {% endblock %}
 
 {% block content %}
