--- a/experiments/templates/experiments/goal.html
+++ b/experiments/templates/experiments/goal.html
@@ -1,1 +1,1 @@
-<img src="{% url experiment_goal goal_name %}" height="1" width="1" />
+<img src="{% url experiment_goal goal_name %}?v={{ random_number }}" height="1" width="1" />
