--- a/experiments/templates/nexus/experiments/results.html
+++ b/experiments/templates/nexus/experiments/results.html
@@ -119,7 +119,12 @@
                                         {% if confidence < 90 %}
                                             <span class="low_confidence">
                                         {% endif %}
-                                        {{ confidence|floatformat:2 }} %</span>
+                                        {% if confidence >= 99.995 %}
+                                            ~{{ confidence|floatformat:2 }} %
+                                        {% else %}
+                                            {{ confidence|floatformat:2 }} %
+                                        {% endif %}
+                                        </span>
                                     {% else %}
                                         N/A
                                     {% endif %}
