--- a/experiments/templates/experiments/goal.html
+++ b/experiments/templates/experiments/goal.html
@@ -1,6 +1,8 @@
-<img src="{% url experiment_goal goal_name %}?v={{ random_number }}" height="1" width="1" />
+<img class="django-experiments-goal" data-experiments-goal-name="{{ goal_name }}" src="{% url experiment_goal goal_name %}?v={{ random_number }}" height="1" width="1" />
 <script>
     $(function() {
-        $(experiments).trigger('goal', ['{{ goal_name }}']);
+        $("img.django-experiments-goal").each(function() {
+            $(experiments).trigger('goal', [$(this).data("experiments-goal-name")]);
+        });
     });
 </script>
