Fixed confusion over when to call the goal function versus when to trigger. Made goal.html naming consistent with rest of project.

--- a/experiments/templates/experiments/goal.html
+++ b/experiments/templates/experiments/goal.html
@@ -1,1 +1,1 @@
-<img class="django-experiments-goal" data-experiments-goal-name="{{ goal_name }}" src="{% url experiment_goal goal_name %}?v={{ random_number }}" height="1" width="1" />
+<img class="experiments-goal" data-experiments-goal-name="{{ goal_name }}" src="{% url experiment_goal goal_name %}?v={{ random_number }}" height="1" width="1" />
