Visualise as cumulative value

--- a/experiments/templates/nexus/experiments/results.html
+++ b/experiments/templates/nexus/experiments/results.html
@@ -168,12 +168,12 @@
                                     var options = {
                                         height: 750,
                                         hAxis : {
-                                            title: 'Number of actions performed',
+                                            title: 'Performed action at least this many times',
                                             logScale: true
                                         },
                                         vAxis : {
                                             title: 'User count',
-                                            logScale: true
+                                            //logScale: true
                                         },
                                         legend : {
                                             position: 'top',
