--- a/experiments/templates/nexus/experiments/dashboard.html
+++ b/experiments/templates/nexus/experiments/dashboard.html
@@ -1,3 +1,4 @@
+{% load url from future %}
 {% if not enabled_experiments %}
     <p>There are no active experiments.</p>
 {% else %}    
@@ -5,7 +6,7 @@
     <table class="experiment-list">
         {% for experiment in enabled_experiments %}
             <tr>
-                <td><a href="{% url experiments:results experiment.name %}">{{experiment.name}}</a></td>
+                <td><a href="{% url 'experiments:results' experiment.name %}">{{experiment.name}}</a></td>
             </tr>
         {% endfor %}
     </table>
