--- a/experiments/templates/experiments/goal.html
+++ b/experiments/templates/experiments/goal.html
@@ -1,1 +1,1 @@
-<img src="{{ url }}" height="1" width="1" />
+<img class="experiments-goal" data-experiments-goal-name="{{ goal_name }}" src="{{ url }}" height="1" width="1" />
