--- a/example_project/templates/test_page.html
+++ b/example_project/templates/test_page.html
@@ -13,6 +13,9 @@
             $(experiments).bind("goal-attained", function(event, goal) {
                 console.log("Goal, " + goal + ", attained!");
             });
+
+            // Note: The enrollments array can only be accessed after
+            // $(document).ready.
             $(experiments.enrollments).each(function(i, enrollment) {
                 $("#enrollments_list").append(
                     $("<dt/>").text(enrollment.experiment)
