--- a/example_project/templates/test_page.html
+++ b/example_project/templates/test_page.html
@@ -5,8 +5,8 @@
 <head>
     <title>Experiment Test Page</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
-    <script src="{% url 'nexus:media' 'experiments' 'js/jquery.cookie.js' %}"></script>
-    <script src="{% url 'nexus:media' 'experiments' 'js/experiments.js' %}"></script>
+    <script src="{{ STATIC_URL }}js/jquery.cookie.js"></script>
+    <script src="{{ STATIC_URL }}js/experiments.js"></script>
 
     <script>
         jQuery(document).ajaxSend(function(event, xhr, settings) {
