--- a/experiments/templates/admin/experiments/experiment/results.html
+++ b/experiments/templates/admin/experiments/experiment/results.html
@@ -1,4 +1,4 @@
-{% extends "nexus/module.html" %}
+{% extends "admin/base_site.html" %}
 {% load humanize %}
 {% load experiment_helpers %}
 {% load url from future %}
@@ -6,16 +6,10 @@
 {% block head %}
     {{ block.super }}
 
-    <link rel="stylesheet" href="{% url 'nexus:media' 'experiments' 'css/experiments.css' %}">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/experiments.css">
 
     <script>
         var EXPERIMENT = {
-            addExperiment:    "{% url 'experiments:add' %}",
-            updateExperiment: "{% url 'experiments:update' %}",
-            deleteExperiment: "{% url 'experiments:delete' %}",
-            updateState:      "{% url 'experiments:state' %}",
-            setAlternative:   "{% url 'experiments:set_alternative' %}",
-
         };
 
         EXPERIMENT_CHART_DATA = {};
@@ -27,7 +21,7 @@
       google.load('visualization', '1.0', {'packages':['corechart']});
     </script>
 
-    <script src="{% url 'nexus:media' 'experiments' 'js/nexus_experiments.js' %}"></script>
+    <script src="{{ STATIC_URL }}js/nexus_experiments.js"></script>
 
 {% endblock %}
 
@@ -40,7 +34,7 @@
             </button>
 
             <button class="xtrasmall button {% if experiment.state == 2 %}toggled{% endif %}" data-state="2" {% if not experiment.switch_key %}disabled="disabled"{% endif %}>
-                Gargoyle
+                Switch
             </button>
 
             <button class="xtrasmall button {% if experiment.state == 1 %}toggled{% endif %}" data-state="1">
@@ -55,7 +49,7 @@
 
     {% if experiment.switch_key %}
         <div data-experiment-name="{{experiment.name}}" class="results header" style>
-            Connected to Gargoyle switch <a href="{% url 'gargoyle:index' %}#id_{{experiment.switch_key}}">{{experiment.switch_key}}</a>.
+            Connected to Gargoyle switch <a href="{% url 'index' %}#id_{{experiment.switch_key}}">{{experiment.switch_key}}</a>.
         </div>
     {% endif %}
 
