--- a/experiments/templates/admin/experiments/experiment/change_form.html
+++ b/experiments/templates/admin/experiments/experiment/change_form.html
@@ -4,12 +4,15 @@
     {% if change %}{% if not is_popup %}
         <ul class="object-tools">
             <li><a href="history/" class="historylink">{% trans "History" %}</a></li>
+            {% if original.switch %}
+                <li><a href="{% url 'admin:waffle_flag_change' original.switch.pk %}" class="historylink">{% trans "Switch" %}</a></li>
+            {% endif %}
             <li><a href="results/" class="historylink">{% trans "Results" %}</a></li>
             {% if has_absolute_url %}
                 <li><a href="../../../r/{{ content_type_id }}/{{ object_id }}/" class="viewsitelink">
                     {% trans "View on site" %}</a>
                 </li>
-            {% endif%}
+            {% endif %}
         </ul>
     {% endif %}{% endif %}
 {% endblock %}
